// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Space /> correctly should apply margin to child component 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 ljAogI Spaceweb__Space-njatzl-0 bOALqu"
  >
    Hello
  </div>
</div>
`;

exports[`Renders <Space /> correctly should apply padding to child component 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 ljAogI Spaceweb__Space-njatzl-0 fydvPW"
  >
    Hello
  </div>
</div>
`;
